--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                </li>
               <li>
                 <a href="contact.html">
-                  <i class="fa fa-th"></i> <span>Contact</span>
+                  <i class="fa fa-th"></i> <span>Contactttttt</span>
                 </a>
               </li>
               
