--- a/gallary.html
+++ b/gallary.html
@@ -80,6 +80,11 @@
                   <i class="fa fa-th"></i> <span>Contact</span>
                 </a>
               </li>
+              <li>
+                <a href="game.html">
+                  <i class="fa fa-th"></i> <span>Game</span>
+                </a>
+              </li>
               
             </ul>
           </section>
