--- a/gallary.html
+++ b/gallary.html
@@ -23,7 +23,7 @@
 
         <header class="main-header">
           <!-- Logo -->
-          <a href="index.html" class="logo">
+          <a href="home.html" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini"><b>CPE</b></span>
             <!-- logo for regular state and mobile devices -->
@@ -81,8 +81,8 @@
                 </a>
               </li>
               <li>
-                <a href="game.html">
-                  <i class="fa fa-th"></i> <span>Game</span>
+                <a href="index.html">
+                  <i class="fa fa-gamepad"></i> <span>Game</span>
                 </a>
               </li>
               
