--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 
       <header class="main-header">
         <!-- Logo -->
-        <a href="home.html" class="logo">
+        <a href="index.html" class="logo">
           <!-- mini logo for sidebar mini 50x50 pixels -->
           <span class="logo-mini"><b>CPE</b></span>
           <!-- logo for regular state and mobile devices -->
@@ -90,7 +90,7 @@
                 </a>
               </li>
               <li>
-                <a href="index.html">
+                <a href="game.html">
                   <i class="fa fa-gamepad"></i> <span>Game</span>
                 </a>
               </li>
@@ -133,6 +133,7 @@
                             <span >First name &nbsp; :</span> 
                             <input type="text"  class="form" id="first">
                             <span class="e" id="fe">  </span>
+                            <br>
                             <br>
                             <span >Last name &nbsp; :</span> 
                             <input type="text"  class="form" id="last">
@@ -254,6 +255,6 @@
      https://firebase.google.com/docs/web/setup#available-libraries -->
     <script src="https://www.gstatic.com/firebasejs/7.7.0/firebase-firestore.js"></script>
     <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
-    <script src="./index.js"></script>
+    <script src="./contact.js"></script>
     </body>
 </html>
